--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 
 </svg>
 <!-- Texto en el centro -->
-<div id="texto1">Feliz Día de la Mujer</div>
-<div id="texto2">"Dónde hay una mujer, hay magia" <br>
-  Hoy celebramos la fuerza, el coraje y la belleza <br> 
-  de todas las mujeres alrededor del mundo.
+<div id="texto1">Feliz Día de la Mujer Pecos</div>
+<div id="texto2">"Ella cree que el atardecer es bello, <br>
+   si supiera que sale sola para verla :). <br> 
 
 </div>
 
