--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- Texto en el centro -->
 <div id="texto1">Feliz Día de la Mujer Pecos</div>
 <div id="texto2">"Ella cree que el atardecer es bello, <br>
-   si supiera que sale sola para verla :). <br> 
+   si supiera que sale solo para verla :) tqm cabezona. <br> 
 
 </div>
 
